--- a/index.htm
+++ b/index.htm
@@ -207,7 +207,7 @@
     
     <main id="desk-main">
         <div class="container">
-            <h4 style="margin-left: 10px;">PREMİUM ELANLAR</h4>
+            <h4>PREMİUM ELANLAR</h4>
         </div>
         <div class="cards container">
         </div>
